--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,9 @@ jobs:
           source-folder: tbx
           test-results-junit: test-results/results.xml
           code-coverage-cobertura: code-coverage/coverage.xml
+            
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage-artifact
+          path: code-coverage/coverage.xml
