--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,8 @@ jobs:
         with:
           name: code-coverage-artifact
           path: code-coverage/coverage.xml
+          
+      - name: upload to codecov 
+        uses: codecov/codecov-action@v1 
+        with:
+          file: code-coverage/coverage.xml
