--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,12 @@ jobs:
         
 
       - name: Run Tests
-        uses: matlab-actions/run-tests@v0.1.0
+        uses: matlab-actions/run-tests@feature-newoption-tests
         with:
           source-folder: tbx
           test-results-junit: test-results/results.xml
           code-coverage-cobertura: code-coverage/coverage.xml
+          test-results-pdf: test-results/pdf-results.xml 
             
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
