--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
           test-results-junit: test-results/results.xml
           code-coverage-cobertura: code-coverage/coverage.xml
           test-results-pdf: test-results/pdf-results.pdf
+          select-by-folder: newtests
+          select-by-tag: 'Unit'
             
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
