--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           test-results-junit: test-results/results.xml
           code-coverage-cobertura: code-coverage/coverage.xml
           test-results-pdf: test-results/pdf-results.pdf
-          select-by-folder: ['newtests','tests']
+          select-by-folder: newtests,tests
             
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
