--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,9 @@ jobs:
           code-coverage-cobertura: code-coverage/coverage.xml
           test-results-pdf: test-results/pdf-results.pdf
           select-by-folder: newtests,tests
-            
+      
+      - name: Verify artifact generation
+        run: test -f test-results/results.xml
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
