--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         
 
       - name: Run Tests
-        uses: matlab-actions/run-tests@v0
+        uses: matlab-actions/run-tests@main
         with:
           source-folder: tbx;misc
           test-results-junit: test-results/results.xml
