--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Run script
         uses: matlab-actions/run-command@v0
         with:
-          command: disp("Hello")       
+          command: cd(../run-tests)       
